add Error Boundary

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,8 @@
 {
   "About": "About",
   "Main": "Main",
-  "Language": "UA"
+  "Language": "UA",
+  "AppError": "Something was wrong",
+  "BtnErrorUpdate": "Update page",
+  "BugTest": "Initialize bug"
 }
