--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -1,8 +1,9 @@
 {
-  "Main": "Головна",
-  "About": "Про нас",
-  "Language": "EN",
-  "AppError": "Виникла непередбачена помилка",
-  "BtnErrorUpdate": "Оновити сторінку",
-  "BugTest": "Ініціалізація помилки"
+    "Main": "Головна",
+    "About": "Про нас",
+    "Language": "EN",
+    "AppError": "Виникла непередбачена помилка",
+    "BtnErrorUpdate": "Оновити сторінку",
+    "BugTest": "Ініціалізація помилки",
+    "Sidebar": "Бокове меню"
 }
